--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 </head>
 <body>
     <ul>
-        <li>欧美</li>
+        <li>国内</li>
         <li>国外</li>
         <li>日韩</li>
+        <li>短视频</li>
     </ul>
 </body>
 </html>
