--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <li>国外</li>
         <li>日韩</li>
         <li>短视频</li>
-        <li>约饭功能</li>
+        <li>约饭功能50%</li>
     </ul>
 </body>
 </html>
